--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Jinx.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sivir.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
