--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sivir.cs" />
+    <Compile Include="Tristana.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
