--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Ezreal.cs" />
     <Compile Include="Graves.cs" />
     <Compile Include="Jinx.cs" />
+    <Compile Include="Kogmaw.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
