--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -90,6 +90,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Lucian.cs" />
     <Compile Include="Sivir.cs" />
     <Compile Include="Teemo.cs" />
     <Compile Include="Tristana.cs" />
