--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+Syndra/App.config
+Syndra/Syndra.csproj
+Marksman/Properties/Resources.Designer.cs
+Marksman/Marksman.csproj
