--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Caitlyn.cs" />
     <Compile Include="Champion.cs" />
     <Compile Include="Corki.cs" />
+    <Compile Include="Draven.cs" />
     <Compile Include="Ezreal.cs" />
     <Compile Include="Graves.cs" />
     <Compile Include="Jinx.cs" />
