--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activator.cs" />
     <Compile Include="Ashe.cs" />
     <Compile Include="Caitlyn.cs" />
     <Compile Include="Champion.cs" />
