Added Heal/Mana Manager

--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Graves.cs" />
     <Compile Include="Jinx.cs" />
     <Compile Include="Kogmaw.cs" />
+    <Compile Include="PotionManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
