--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Tristana.cs" />
     <Compile Include="Twitch.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="Urgot.cs" />    
     <Compile Include="Varus.cs" />
     <Compile Include="Vayne.cs" />
   </ItemGroup>
