--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Ezreal.cs" />
     <Compile Include="Graves.cs" />
     <Compile Include="Jinx.cs" />
+    <Compile Include="Kalista.cs" />
     <Compile Include="Kogmaw.cs" />
     <Compile Include="PotionManager.cs" />
     <Compile Include="Program.cs" />
