--- a/Marksman/Marksman.csproj
+++ b/Marksman/Marksman.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Corki.cs" />
     <Compile Include="Draven.cs" />
     <Compile Include="Ezreal.cs" />
+    <Compile Include="Gnar.cs" />    
     <Compile Include="Graves.cs" />
     <Compile Include="Jinx.cs" />
     <Compile Include="Kalista.cs" />
