--- a/Syndra/Syndra.csproj
+++ b/Syndra/Syndra.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OrbManager.cs" />
+    <Compile Include="ManaBarIndicator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
