Added SharpDX.Direct3D9.dll reference path

--- a/Syndra/Syndra.csproj
+++ b/Syndra/Syndra.csproj
@@ -43,6 +43,9 @@
     <Reference Include="SharpDX">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
+    <Reference Include="SharpDX.Direct3D9">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
